--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -31,7 +31,7 @@ img {
 }
 
 .topnav {
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 3.5%;
 }
 .header-logo {
@@ -101,7 +101,7 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    /* margin-top: -15px; */
   }
 }
 
@@ -438,7 +438,7 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
+  font-size: clamp(2.5rem, 8vw, 6rem);
   font-weight: normal;
   white-space: nowrap;
 }
@@ -464,6 +464,7 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -489,6 +490,7 @@ footer {
     background: #fff;
     color: #000;
     padding: 20px;
+    min-width: 250px;
   }
   .hero-content::after {
     content: unset;
@@ -497,7 +499,6 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
     white-space: normal;
   }
   .hero-text {
@@ -532,4 +533,9 @@ footer {
 .error {
   font-size: 0.9rem;
   color: red;
+}
+
+.success {
+  font-size: 1.4rem;
+  color: rgb(108, 243, 81);
 }
